# Piscine-Python1

Module0/: ex09_tester.py
Module0/ex00/: hello.py
Module0/ex02/: find_ft_type.py
Module0/ex03/: NULL_not_found.py
Module0/ex04/: whatis.py
Module0/ex05/: building.py
Module0/ex06/: filterstring.py  ft_filter.py
Module0/ex07/: sos.py
Module0/ex08/: Loading.py  tester.py
Module0/ex09/: LICENSE  README.md  pyproject.toml
Module0/ex09/ft_package/: __init__.py
Module1/ex00/: give_bmi.py
Module1/ex01/: array2D.py
Module1/ex03/: load_image.py  zoom.py
Module1/ex04/: load_image.py  rotate.py
Module1/ex05/: pimp_image.py
Module2/ex01/: aff_life.py  load_csv.py
Module2_home/ex00/: tester.py
Module2_home/ex01/: aff_life.py
Module2_home/ex02/: aff_pop.py  load_csv.py
Module2_home/ex03/: load_csv.py  projection_life.py
Module3_home/ex00/: tester.py
Module3_home/ex01/: S1E7.py  S1E9.py
Module3_home/ex02/: DiamondTrap.py
Module3_home/ex03/: ft_calculator.py  tester.py
Module3_home/ex04/: ft_calculator.py
ex00/: hello.py
ex01/: format_ft_time.py
ex02/: tester.py
