[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [{ name = "Yonah", email = "sebban.yonah@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]